[gd_scene load_steps=2 format=2]

[ext_resource path="res://code/Menu.gd" type="Script" id=1]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 494.0
margin_right = 720.0
margin_bottom = 514.0
text = "9 Column"

[node name="StartGame2" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 518.0
margin_right = 720.0
margin_bottom = 538.0
text = "5 Column"

[node name="RandGame" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 542.0
margin_right = 720.0
margin_bottom = 562.0
text = "Random Game"

[node name="EasyGame" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 566.0
margin_right = 720.0
margin_bottom = 586.0
text = "Easy Game"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/StartGame2" to="." method="_on_StartGame2_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/RandGame" to="." method="_on_RandGame_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/EasyGame" to="." method="_on_EasyGame_pressed"]
